@@ -1,16 +1,11 @@
 //
 // ========================================================================
-// Copyright (c) 1995-2020 Mort Bay Consulting Pty Ltd and others.
+// Copyright (c) 1995-2021 Mort Bay Consulting Pty Ltd and others.
 //
-// This program and the accompanying materials are made available under
-// the terms of the Eclipse Public License 2.0 which is available at
-// https://www.eclipse.org/legal/epl-2.0
-//
-// This Source Code may also be made available under the following
-// Secondary Licenses when the conditions for such availability set
-// forth in the Eclipse Public License, v. 2.0 are satisfied:
-// the Apache License v2.0 which is available at
-// https://www.apache.org/licenses/LICENSE-2.0
+// This program and the accompanying materials are made available under the
+// terms of the Eclipse Public License v. 2.0 which is available at
+// https://www.eclipse.org/legal/epl-2.0, or the Apache License, Version 2.0
+// which is available at https://www.apache.org/licenses/LICENSE-2.0.
 //
 // SPDX-License-Identifier: EPL-2.0 OR Apache-2.0
 // ========================================================================
@@ -27,6 +22,8 @@ import java.nio.file.Path;
 import java.nio.file.Paths;
 import java.nio.file.StandardCopyOption;
 import java.nio.file.StandardOpenOption;
+import java.util.Arrays;
+import java.util.List;
 import java.util.concurrent.CountDownLatch;
 import java.util.concurrent.TimeUnit;
 
@@ -47,14 +44,18 @@ import org.eclipse.jetty.websocket.api.Session;
 import org.eclipse.jetty.websocket.api.StatusCode;
 import org.eclipse.jetty.websocket.api.WebSocketListener;
 import org.eclipse.jetty.websocket.client.WebSocketClient;
+import org.junit.jupiter.api.Tag;
 import org.junit.jupiter.api.Test;
 import org.junit.jupiter.api.condition.DisabledOnJre;
+import org.junit.jupiter.api.condition.DisabledOnOs;
 import org.junit.jupiter.api.condition.JRE;
+import org.junit.jupiter.api.condition.OS;
 import org.junit.jupiter.params.ParameterizedTest;
 import org.junit.jupiter.params.provider.ValueSource;
 
 import static org.hamcrest.MatcherAssert.assertThat;
 import static org.hamcrest.Matchers.containsString;
+import static org.hamcrest.Matchers.greaterThan;
 import static org.hamcrest.Matchers.is;
 import static org.hamcrest.Matchers.not;
 import static org.junit.jupiter.api.Assertions.assertEquals;
@@ -63,24 +64,24 @@ import static org.junit.jupiter.api.Assertions.assertNotEquals;
 import static org.junit.jupiter.api.Assertions.assertTrue;
 import static org.junit.jupiter.api.Assumptions.assumeTrue;
 
-public class DistributionTests extends AbstractDistributionTest
+public class DistributionTests extends AbstractJettyHomeTest
 {
     @Test
     public void testStartStop() throws Exception
     {
         String jettyVersion = System.getProperty("jettyVersion");
-        DistributionTester distribution = DistributionTester.Builder.newInstance()
+        JettyHomeTester distribution = JettyHomeTester.Builder.newInstance()
             .jettyVersion(jettyVersion)
             .mavenLocalRepository(System.getProperty("mavenRepoPath"))
             .build();
 
-        try (DistributionTester.Run run1 = distribution.start("--add-to-start=http"))
+        try (JettyHomeTester.Run run1 = distribution.start("--add-modules=http"))
         {
-            assertTrue(run1.awaitFor(5, TimeUnit.SECONDS));
+            assertTrue(run1.awaitFor(10, TimeUnit.SECONDS));
             assertEquals(0, run1.getExitValue());
 
             int port = distribution.freePort();
-            try (DistributionTester.Run run2 = distribution.start("jetty.http.port=" + port))
+            try (JettyHomeTester.Run run2 = distribution.start("jetty.http.port=" + port))
             {
                 assertTrue(run2.awaitConsoleLogsFor("Started Server@", 10, TimeUnit.SECONDS));
 
@@ -89,7 +90,7 @@ public class DistributionTests extends AbstractDistributionTest
                 assertEquals(HttpStatus.NOT_FOUND_404, response.getStatus());
 
                 run2.stop();
-                assertTrue(run2.awaitFor(5, TimeUnit.SECONDS));
+                assertTrue(run2.awaitFor(10, TimeUnit.SECONDS));
             }
         }
     }
@@ -98,27 +99,25 @@ public class DistributionTests extends AbstractDistributionTest
     public void testQuickStartGenerationAndRun() throws Exception
     {
         String jettyVersion = System.getProperty("jettyVersion");
-        DistributionTester distribution = DistributionTester.Builder.newInstance()
+        JettyHomeTester distribution = JettyHomeTester.Builder.newInstance()
             .jettyVersion(jettyVersion)
             .mavenLocalRepository(System.getProperty("mavenRepoPath"))
             .build();
 
         String[] args1 = {
-            "--create-startd",
             "--approve-all-licenses",
-            "--add-to-start=resources,server,http,webapp,deploy,jsp,servlet,servlets,quickstart" 
+            "--add-modules=resources,server,http,webapp,deploy,jsp,servlet,servlets,quickstart"
         };
-        
-        try (DistributionTester.Run run1 = distribution.start(args1))
+
+        try (JettyHomeTester.Run run1 = distribution.start(args1))
         {
-            assertTrue(run1.awaitFor(5, TimeUnit.SECONDS));
+            assertTrue(run1.awaitFor(10, TimeUnit.SECONDS));
             assertEquals(0, run1.getExitValue());
 
-            File war = distribution.resolveArtifact("org.eclipse.jetty.tests:test-simple-webapp:war:" + jettyVersion);
+            File war = distribution.resolveArtifact("org.eclipse.jetty.demos:demo-jsp-webapp:war:" + jettyVersion);
             distribution.installWarFile(war, "test");
 
-     
-            try (DistributionTester.Run run2 = distribution.start("jetty.quickstart.mode=GENERATE"))
+            try (JettyHomeTester.Run run2 = distribution.start("jetty.quickstart.mode=GENERATE"))
             {
                 assertTrue(run2.awaitConsoleLogsFor("QuickStartGeneratorConfiguration:main: Generated", 10, TimeUnit.SECONDS));
                 Path unpackedWebapp = distribution.getJettyBase().resolve("webapps").resolve("test");
@@ -128,80 +127,83 @@ public class DistributionTests extends AbstractDistributionTest
                 Path quickstartWebXml = webInf.resolve("quickstart-web.xml");
                 assertTrue(Files.exists(quickstartWebXml));
                 assertNotEquals(0, Files.size(quickstartWebXml));
-                
+
                 int port = distribution.freePort();
-                
-                try (DistributionTester.Run run3 = distribution.start("jetty.http.port=" + port, "jetty.quickstart.mode=QUICKSTART"))
+
+                try (JettyHomeTester.Run run3 = distribution.start("jetty.http.port=" + port, "jetty.quickstart.mode=QUICKSTART"))
                 {
                     assertTrue(run3.awaitConsoleLogsFor("Started Server@", 10, TimeUnit.SECONDS));
 
                     startHttpClient();
                     ContentResponse response = client.GET("http://localhost:" + port + "/test/index.jsp");
                     assertEquals(HttpStatus.OK_200, response.getStatus());
-                    assertThat(response.getContentAsString(), containsString("Hello"));
+                    assertThat(response.getContentAsString(), containsString("JSP Examples"));
                     assertThat(response.getContentAsString(), not(containsString("<%")));
                 }
             }
         }
     }
-    
+
     @Test
     public void testSimpleWebAppWithJSP() throws Exception
     {
+        Path jettyBase = newTestJettyBaseDirectory();
         String jettyVersion = System.getProperty("jettyVersion");
-        DistributionTester distribution = DistributionTester.Builder.newInstance()
+        JettyHomeTester distribution = JettyHomeTester.Builder.newInstance()
             .jettyVersion(jettyVersion)
+            .jettyBase(jettyBase)
             .mavenLocalRepository(System.getProperty("mavenRepoPath"))
             .build();
 
         String[] args1 = {
-            "--create-startd",
+            "--create-start-ini",
             "--approve-all-licenses",
-            "--add-to-start=resources,server,http,webapp,deploy,jsp,jmx,servlet,servlets"
+            "--add-modules=resources,server,http,webapp,deploy,jsp,jmx,servlet,servlets"
         };
-        try (DistributionTester.Run run1 = distribution.start(args1))
+        try (JettyHomeTester.Run run1 = distribution.start(args1))
         {
-            assertTrue(run1.awaitFor(5, TimeUnit.SECONDS));
+            assertTrue(run1.awaitFor(10, TimeUnit.SECONDS));
             assertEquals(0, run1.getExitValue());
 
-            File war = distribution.resolveArtifact("org.eclipse.jetty.tests:test-simple-webapp:war:" + jettyVersion);
+            // Verify that --create-start-ini works
+            assertTrue(Files.exists(jettyBase.resolve("start.ini")));
+
+            File war = distribution.resolveArtifact("org.eclipse.jetty.demos:demo-jsp-webapp:war:" + jettyVersion);
             distribution.installWarFile(war, "test");
 
             int port = distribution.freePort();
-            try (DistributionTester.Run run2 = distribution.start("jetty.http.port=" + port))
+            try (JettyHomeTester.Run run2 = distribution.start("jetty.http.port=" + port))
             {
                 assertTrue(run2.awaitConsoleLogsFor("Started Server@", 10, TimeUnit.SECONDS));
 
                 startHttpClient();
                 ContentResponse response = client.GET("http://localhost:" + port + "/test/index.jsp");
                 assertEquals(HttpStatus.OK_200, response.getStatus());
-                assertThat(response.getContentAsString(), containsString("Hello"));
+                assertThat(response.getContentAsString(), containsString("JSP Examples"));
                 assertThat(response.getContentAsString(), not(containsString("<%")));
             }
         }
     }
 
     @Test
-    @DisabledOnJre(JRE.JAVA_8)
     public void testSimpleWebAppWithJSPOnModulePath() throws Exception
     {
         String jettyVersion = System.getProperty("jettyVersion");
-        DistributionTester distribution = DistributionTester.Builder.newInstance()
+        JettyHomeTester distribution = JettyHomeTester.Builder.newInstance()
             .jettyVersion(jettyVersion)
             .mavenLocalRepository(System.getProperty("mavenRepoPath"))
             .build();
 
         String[] args1 = {
-            "--create-startd",
             "--approve-all-licenses",
-            "--add-to-start=resources,server,http,webapp,deploy,jsp,jmx,servlet,servlets"
+            "--add-modules=resources,server,http,webapp,deploy,jsp,jmx,servlet,servlets"
         };
-        try (DistributionTester.Run run1 = distribution.start(args1))
+        try (JettyHomeTester.Run run1 = distribution.start(args1))
         {
-            assertTrue(run1.awaitFor(5, TimeUnit.SECONDS));
+            assertTrue(run1.awaitFor(10, TimeUnit.SECONDS));
             assertEquals(0, run1.getExitValue());
 
-            File war = distribution.resolveArtifact("org.eclipse.jetty.tests:test-simple-webapp:war:" + jettyVersion);
+            File war = distribution.resolveArtifact("org.eclipse.jetty.demos:demo-jsp-webapp:war:" + jettyVersion);
             distribution.installWarFile(war, "test");
 
             int port = distribution.freePort();
@@ -209,28 +211,26 @@ public class DistributionTests extends AbstractDistributionTest
                 "--jpms",
                 "jetty.http.port=" + port
             };
-            try (DistributionTester.Run run2 = distribution.start(args2))
+            try (JettyHomeTester.Run run2 = distribution.start(args2))
             {
                 assertTrue(run2.awaitConsoleLogsFor("Started Server@", 10, TimeUnit.SECONDS));
 
                 startHttpClient();
                 ContentResponse response = client.GET("http://localhost:" + port + "/test/index.jsp");
                 assertEquals(HttpStatus.OK_200, response.getStatus());
-                assertThat(response.getContentAsString(), containsString("Hello"));
+                assertThat(response.getContentAsString(), containsString("JSP Examples"));
                 assertThat(response.getContentAsString(), not(containsString("<%")));
             }
         }
     }
 
     @Test
-    @DisabledOnJre(JRE.JAVA_8)
     public void testSimpleWebAppWithJSPOverH2C() throws Exception
     {
         testSimpleWebAppWithJSPOverHTTP2(false);
     }
 
     @Test
-    @DisabledOnJre(JRE.JAVA_8)
     public void testSimpleWebAppWithJSPOverH2() throws Exception
     {
         testSimpleWebAppWithJSPOverHTTP2(true);
@@ -239,26 +239,25 @@ public class DistributionTests extends AbstractDistributionTest
     private void testSimpleWebAppWithJSPOverHTTP2(boolean ssl) throws Exception
     {
         String jettyVersion = System.getProperty("jettyVersion");
-        DistributionTester distribution = DistributionTester.Builder.newInstance()
+        JettyHomeTester distribution = JettyHomeTester.Builder.newInstance()
             .jettyVersion(jettyVersion)
             .mavenLocalRepository(System.getProperty("mavenRepoPath"))
             .build();
 
         String[] args1 = {
-            "--create-startd",
-            "--add-to-start=jsp,deploy," + (ssl ? "http2,test-keystore" : "http2c")
+            "--add-modules=jsp,deploy," + (ssl ? "http2,test-keystore" : "http2c")
         };
-        try (DistributionTester.Run run1 = distribution.start(args1))
+        try (JettyHomeTester.Run run1 = distribution.start(args1))
         {
-            assertTrue(run1.awaitFor(5, TimeUnit.SECONDS));
+            assertTrue(run1.awaitFor(10, TimeUnit.SECONDS));
             assertEquals(0, run1.getExitValue());
 
-            File war = distribution.resolveArtifact("org.eclipse.jetty.tests:test-simple-webapp:war:" + jettyVersion);
+            File war = distribution.resolveArtifact("org.eclipse.jetty.demos:demo-jsp-webapp:war:" + jettyVersion);
             distribution.installWarFile(war, "test");
 
             int port = distribution.freePort();
             String portProp = ssl ? "jetty.ssl.port" : "jetty.http.port";
-            try (DistributionTester.Run run2 = distribution.start(portProp + "=" + port))
+            try (JettyHomeTester.Run run2 = distribution.start(portProp + "=" + port))
             {
                 assertTrue(run2.awaitConsoleLogsFor("Started Server@", 10, TimeUnit.SECONDS));
 
@@ -268,13 +267,14 @@ public class DistributionTests extends AbstractDistributionTest
                 startHttpClient(() -> new HttpClient(new HttpClientTransportOverHTTP2(h2Client)));
                 ContentResponse response = client.GET((ssl ? "https" : "http") + "://localhost:" + port + "/test/index.jsp");
                 assertEquals(HttpStatus.OK_200, response.getStatus());
-                assertThat(response.getContentAsString(), containsString("Hello"));
+                assertThat(response.getContentAsString(), containsString("JSP Examples"));
                 assertThat(response.getContentAsString(), not(containsString("<%")));
             }
         }
     }
 
     @Test
+    @DisabledOnOs(OS.WINDOWS)  // jnr not supported on windows
     public void testUnixSocket() throws Exception
     {
         Path tmpSockFile;
@@ -293,33 +293,32 @@ public class DistributionTests extends AbstractDistributionTest
         assertTrue(Files.deleteIfExists(sockFile), "temp sock file cannot be deleted");
 
         String jettyVersion = System.getProperty("jettyVersion");
-        DistributionTester distribution = DistributionTester.Builder.newInstance()
+        JettyHomeTester distribution = JettyHomeTester.Builder.newInstance()
             .jettyVersion(jettyVersion)
             .mavenLocalRepository(System.getProperty("mavenRepoPath"))
             .build();
 
         String[] args1 = {
-            "--create-startd",
-            "--add-to-start=unixsocket-http,deploy,jsp",
+            "--add-modules=unixsocket-http,deploy,jsp",
             "--approve-all-licenses"
         };
-        try (DistributionTester.Run run1 = distribution.start(args1))
+        try (JettyHomeTester.Run run1 = distribution.start(args1))
         {
             // Give it time to download the dependencies
             assertTrue(run1.awaitFor(30, TimeUnit.SECONDS));
             assertEquals(0, run1.getExitValue());
 
-            File war = distribution.resolveArtifact("org.eclipse.jetty.tests:test-simple-webapp:war:" + jettyVersion);
+            File war = distribution.resolveArtifact("org.eclipse.jetty.demos:demo-jsp-webapp:war:" + jettyVersion);
             distribution.installWarFile(war, "test");
 
-            try (DistributionTester.Run run2 = distribution.start("jetty.unixsocket.path=" + sockFile.toString()))
+            try (JettyHomeTester.Run run2 = distribution.start("jetty.unixsocket.path=" + sockFile.toString()))
             {
                 assertTrue(run2.awaitConsoleLogsFor("Started Server@", 10, TimeUnit.SECONDS));
 
                 startHttpClient(() -> new HttpClient(new HttpClientTransportOverUnixSockets(sockFile.toString())));
                 ContentResponse response = client.GET("http://localhost/test/index.jsp");
                 assertEquals(HttpStatus.OK_200, response.getStatus());
-                assertThat(response.getContentAsString(), containsString("Hello"));
+                assertThat(response.getContentAsString(), containsString("JSP Examples"));
                 assertThat(response.getContentAsString(), not(containsString("<%")));
             }
         }
@@ -332,37 +331,36 @@ public class DistributionTests extends AbstractDistributionTest
     @Test
     public void testLog4j2ModuleWithSimpleWebAppWithJSP() throws Exception
     {
-        Path jettyBase = Files.createTempDirectory("jetty_base");
+        Path jettyBase = newTestJettyBaseDirectory();
         String jettyVersion = System.getProperty("jettyVersion");
-        DistributionTester distribution = DistributionTester.Builder.newInstance()
+        JettyHomeTester distribution = JettyHomeTester.Builder.newInstance()
             .jettyVersion(jettyVersion)
             .jettyBase(jettyBase)
             .mavenLocalRepository(System.getProperty("mavenRepoPath"))
             .build();
 
         String[] args1 = {
-            "--create-startd",
             "--approve-all-licenses",
-            "--add-to-start=resources,server,http,webapp,deploy,jsp,servlet,servlets,logging-log4j2"
+            "--add-modules=resources,server,http,webapp,deploy,jsp,servlet,servlets,logging-log4j2"
         };
-        try (DistributionTester.Run run1 = distribution.start(args1))
+        try (JettyHomeTester.Run run1 = distribution.start(args1))
         {
-            assertTrue(run1.awaitFor(5, TimeUnit.SECONDS));
+            assertTrue(run1.awaitFor(10, TimeUnit.SECONDS));
             assertEquals(0, run1.getExitValue());
             assertTrue(Files.exists(jettyBase.resolve("resources/log4j2.xml")));
 
-            File war = distribution.resolveArtifact("org.eclipse.jetty.tests:test-simple-webapp:war:" + jettyVersion);
+            File war = distribution.resolveArtifact("org.eclipse.jetty.demos:demo-jsp-webapp:war:" + jettyVersion);
             distribution.installWarFile(war, "test");
 
             int port = distribution.freePort();
-            try (DistributionTester.Run run2 = distribution.start("jetty.http.port=" + port))
+            try (JettyHomeTester.Run run2 = distribution.start("jetty.http.port=" + port))
             {
                 assertTrue(run2.awaitConsoleLogsFor("Started Server@", 10, TimeUnit.SECONDS));
 
                 startHttpClient();
                 ContentResponse response = client.GET("http://localhost:" + port + "/test/index.jsp");
                 assertEquals(HttpStatus.OK_200, response.getStatus());
-                assertThat(response.getContentAsString(), containsString("Hello"));
+                assertThat(response.getContentAsString(), containsString("JSP Examples"));
                 assertThat(response.getContentAsString(), not(containsString("<%")));
                 assertTrue(Files.exists(jettyBase.resolve("resources/log4j2.xml")));
             }
@@ -373,22 +371,143 @@ public class DistributionTests extends AbstractDistributionTest
         }
     }
 
+    @ParameterizedTest
+    @ValueSource(strings = {"http", "https"})
+    public void testWebsocketClientInWebappProvidedByServer(String scheme) throws Exception
+    {
+        Path jettyBase = newTestJettyBaseDirectory();
+        String jettyVersion = System.getProperty("jettyVersion");
+        JettyHomeTester distribution = JettyHomeTester.Builder.newInstance()
+            .jettyVersion(jettyVersion)
+            .jettyBase(jettyBase)
+            .mavenLocalRepository(System.getProperty("mavenRepoPath"))
+            .build();
+
+        String module = "https".equals(scheme) ? "test-keystore," + scheme : scheme;
+        String[] args1 = {
+            "--create-startd",
+            "--approve-all-licenses",
+            "--add-to-start=resources,server,webapp,deploy,jsp,jmx,servlet,servlets,websocket,websocket-jetty-client," + module,
+            };
+        try (JettyHomeTester.Run run1 = distribution.start(args1))
+        {
+            assertTrue(run1.awaitFor(10, TimeUnit.SECONDS));
+            assertEquals(0, run1.getExitValue());
+
+            File webApp = distribution.resolveArtifact("org.eclipse.jetty.tests:test-websocket-client-provided-webapp:war:" + jettyVersion);
+            distribution.installWarFile(webApp, "test");
+
+            int port = distribution.freePort();
+            String[] args2 = {
+                "jetty.http.port=" + port,
+                "jetty.ssl.port=" + port,
+                // "jetty.server.dumpAfterStart=true",
+            };
+
+            try (JettyHomeTester.Run run2 = distribution.start(args2))
+            {
+                assertTrue(run2.awaitConsoleLogsFor("Started Server@", 10, TimeUnit.SECONDS));
+
+                // We should get the correct configuration from the jetty-websocket-httpclient.xml file.
+                startHttpClient(scheme.equals("https"));
+                URI serverUri = URI.create(scheme + "://localhost:" + port + "/test");
+                ContentResponse response = client.GET(serverUri);
+                assertEquals(HttpStatus.OK_200, response.getStatus());
+                String content = response.getContentAsString();
+                assertThat(content, containsString("WebSocketEcho: success"));
+                assertThat(content, containsString("ConnectTimeout: 4999"));
+            }
+        }
+    }
+
+    @ParameterizedTest
+    @ValueSource(strings = {"http", "https"})
+    public void testWebsocketClientInWebapp(String scheme) throws Exception
+    {
+        Path jettyBase = newTestJettyBaseDirectory();
+        String jettyVersion = System.getProperty("jettyVersion");
+        JettyHomeTester distribution = JettyHomeTester.Builder.newInstance()
+            .jettyVersion(jettyVersion)
+            .jettyBase(jettyBase)
+            .mavenLocalRepository(System.getProperty("mavenRepoPath"))
+            .build();
+
+        String module = "https".equals(scheme) ? "test-keystore," + scheme : scheme;
+        String[] args1 = {
+            "--create-startd",
+            "--approve-all-licenses",
+            "--add-to-start=resources,server,webapp,deploy,jsp,jmx,servlet,servlets,websocket," + module
+        };
+        try (JettyHomeTester.Run run1 = distribution.start(args1))
+        {
+            assertTrue(run1.awaitFor(10, TimeUnit.SECONDS));
+            assertEquals(0, run1.getExitValue());
+
+            File webApp = distribution.resolveArtifact("org.eclipse.jetty.tests:test-websocket-client-webapp:war:" + jettyVersion);
+            distribution.installWarFile(webApp, "test");
+
+            int port = distribution.freePort();
+            String[] args2 = {
+                "jetty.http.port=" + port,
+                "jetty.ssl.port=" + port,
+                // "jetty.server.dumpAfterStart=true",
+            };
+
+            try (JettyHomeTester.Run run2 = distribution.start(args2))
+            {
+                assertTrue(run2.awaitConsoleLogsFor("Started Server@", 10, TimeUnit.SECONDS));
+
+                // We should get the correct configuration from the jetty-websocket-httpclient.xml file.
+                startHttpClient(scheme.equals("https"));
+                URI serverUri = URI.create(scheme + "://localhost:" + port + "/test");
+                ContentResponse response = client.GET(serverUri);
+                assertEquals(HttpStatus.OK_200, response.getStatus());
+                String content = response.getContentAsString();
+                assertThat(content, containsString("WebSocketEcho: success"));
+                assertThat(content, containsString("ConnectTimeout: 4999"));
+            }
+        }
+    }
+
+    @Test
+    @Tag("external")
+    public void testDownload() throws Exception
+    {
+        Path jettyBase = Files.createTempDirectory("jetty_base");
+        String jettyVersion = System.getProperty("jettyVersion");
+        JettyHomeTester distribution = JettyHomeTester.Builder.newInstance()
+            .jettyVersion(jettyVersion)
+            .jettyBase(jettyBase)
+            .mavenLocalRepository(System.getProperty("mavenRepoPath"))
+            .build();
+
+        String outPath = "etc/maven-metadata.xml";
+        String[] args1 = {
+            "--download=https://repo1.maven.org/maven2/org/eclipse/jetty/maven-metadata.xml|" + outPath
+        };
+        try (JettyHomeTester.Run run = distribution.start(args1))
+        {
+            assertTrue(run.awaitConsoleLogsFor("Base directory was modified", 110, TimeUnit.SECONDS));
+            Path target = jettyBase.resolve(outPath);
+            assertTrue(Files.exists(target), "could not create " + target);
+        }
+    }
+
     @Test
     public void testWebAppWithProxyAndJPMS() throws Exception
     {
         String jettyVersion = System.getProperty("jettyVersion");
-        DistributionTester distribution = DistributionTester.Builder.newInstance()
+        JettyHomeTester distribution = JettyHomeTester.Builder.newInstance()
             .jettyVersion(jettyVersion)
             .mavenLocalRepository(System.getProperty("mavenRepoPath"))
             .build();
 
         String[] args1 = {
-            "--create-startd",
-            "--add-to-start=http,webapp,deploy,resources"
+            "--add-modules=http,webapp,deploy,resources"
         };
-        try (DistributionTester.Run run1 = distribution.start(args1))
+        try (JettyHomeTester.Run run1 = distribution.start(args1))
         {
-            assertTrue(run1.awaitFor(5, TimeUnit.SECONDS));
+            assertTrue(run1.awaitFor(10, TimeUnit.SECONDS));
             assertEquals(0, run1.getExitValue());
 
             Path logFile = distribution.getJettyBase().resolve("resources").resolve("jetty-logging.properties");
@@ -397,11 +516,11 @@ public class DistributionTests extends AbstractDistributionTest
                 writer.write("org.eclipse.jetty.LEVEL=INFO");
             }
 
-            File war = distribution.resolveArtifact("org.eclipse.jetty.tests:test-proxy-webapp:war:" + jettyVersion);
+            File war = distribution.resolveArtifact("org.eclipse.jetty.demos:demo-proxy-webapp:war:" + jettyVersion);
             distribution.installWarFile(war, "proxy");
 
             int port = distribution.freePort();
-            try (DistributionTester.Run run2 = distribution.start("--jpms", "jetty.http.port=" + port, "jetty.server.dumpAfterStart=true"))
+            try (JettyHomeTester.Run run2 = distribution.start("--jpms", "jetty.http.port=" + port, "jetty.server.dumpAfterStart=true"))
             {
                 assertTrue(run2.awaitConsoleLogsFor("Started Server@", 10, TimeUnit.SECONDS));
 
@@ -413,9 +532,10 @@ public class DistributionTests extends AbstractDistributionTest
     }
 
     /**
-     * This reproduces some classloading issue with MethodHandles in JDK14-15, this has been fixed in JDK16.
-     * @see <a href="https://bugs.openjdk.java.net/browse/JDK-8244090">JDK-8244090</a>
+     * This reproduces some classloading issue with MethodHandles in JDK14-110, This has been fixed in JDK16.
+     *
      * @throws Exception if there is an error during the test.
+     * @see <a href="https://bugs.openjdk.java.net/browse/JDK-8244090">JDK-8244090</a>
      */
     @ParameterizedTest
     @ValueSource(strings = {"", "--jpms"})
@@ -423,18 +543,17 @@ public class DistributionTests extends AbstractDistributionTest
     public void testSimpleWebAppWithWebsocket(String arg) throws Exception
     {
         String jettyVersion = System.getProperty("jettyVersion");
-        DistributionTester distribution = DistributionTester.Builder.newInstance()
+        JettyHomeTester distribution = JettyHomeTester.Builder.newInstance()
             .jettyVersion(jettyVersion)
             .mavenLocalRepository(System.getProperty("mavenRepoPath"))
             .build();
         String[] args1 = {
-            "--create-startd",
             "--approve-all-licenses",
-            "--add-to-start=resources,server,http,webapp,deploy,jsp,jmx,servlet,servlets,websocket"
+            "--add-modules=resources,server,http,webapp,deploy,jsp,jmx,servlet,servlets,websocket"
         };
-        try (DistributionTester.Run run1 = distribution.start(args1))
+        try (JettyHomeTester.Run run1 = distribution.start(args1))
         {
-            assertTrue(run1.awaitFor(5, TimeUnit.SECONDS));
+            assertTrue(run1.awaitFor(10, TimeUnit.SECONDS));
             assertEquals(0, run1.getExitValue());
 
             File webApp = distribution.resolveArtifact("org.eclipse.jetty.tests:test-websocket-webapp:war:" + jettyVersion);
@@ -448,7 +567,7 @@ public class DistributionTests extends AbstractDistributionTest
                 //"jetty.server.dumpAfterStart=true"
             };
 
-            try (DistributionTester.Run run2 = distribution.start(args2))
+            try (JettyHomeTester.Run run2 = distribution.start(args2))
             {
                 assertTrue(run2.awaitConsoleLogsFor("Started Server@", 10, TimeUnit.SECONDS));
                 assertFalse(run2.getLogs().stream().anyMatch(s -> s.contains("LinkageError")));
@@ -460,20 +579,20 @@ public class DistributionTests extends AbstractDistributionTest
 
                 // Verify /test1 is able to establish a WebSocket connection.
                 WsListener webSocketListener = new WsListener();
-                Session session = wsClient.connect(webSocketListener, serverUri.resolve("/test1")).get(5, TimeUnit.SECONDS);
+                Session session = wsClient.connect(webSocketListener, serverUri.resolve("/test1")).get(10, TimeUnit.SECONDS);
                 session.getRemote().sendString("echo message");
-                assertThat(webSocketListener.textMessages.poll(5, TimeUnit.SECONDS), is("echo message"));
+                assertThat(webSocketListener.textMessages.poll(10, TimeUnit.SECONDS), is("echo message"));
                 session.close();
-                assertTrue(webSocketListener.closeLatch.await(5, TimeUnit.SECONDS));
+                assertTrue(webSocketListener.closeLatch.await(10, TimeUnit.SECONDS));
                 assertThat(webSocketListener.closeCode, is(StatusCode.NORMAL));
 
                 // Verify /test2 is able to establish a WebSocket connection.
                 webSocketListener = new WsListener();
-                session = wsClient.connect(webSocketListener, serverUri.resolve("/test2")).get(5, TimeUnit.SECONDS);
+                session = wsClient.connect(webSocketListener, serverUri.resolve("/test2")).get(10, TimeUnit.SECONDS);
                 session.getRemote().sendString("echo message");
-                assertThat(webSocketListener.textMessages.poll(5, TimeUnit.SECONDS), is("echo message"));
+                assertThat(webSocketListener.textMessages.poll(10, TimeUnit.SECONDS), is("echo message"));
                 session.close();
-                assertTrue(webSocketListener.closeLatch.await(5, TimeUnit.SECONDS));
+                assertTrue(webSocketListener.closeLatch.await(10, TimeUnit.SECONDS));
                 assertThat(webSocketListener.closeCode, is(StatusCode.NORMAL));
             }
         }
@@ -502,35 +621,34 @@ public class DistributionTests extends AbstractDistributionTest
     @Test
     public void testStartStopLog4j2Modules() throws Exception
     {
-        Path jettyBase = Files.createTempDirectory("jetty_base");
+        Path jettyBase = newTestJettyBaseDirectory();
 
         String jettyVersion = System.getProperty("jettyVersion");
-        DistributionTester distribution = DistributionTester.Builder.newInstance() //
-            .jettyVersion(jettyVersion) //
-            .jettyBase(jettyBase) //
-            .mavenLocalRepository(System.getProperty("mavenRepoPath")) //
+        JettyHomeTester distribution = JettyHomeTester.Builder.newInstance()
+            .jettyVersion(jettyVersion)
+            .jettyBase(jettyBase)
+            .mavenLocalRepository(System.getProperty("mavenRepoPath"))
             .build();
 
         String[] args = {
-            "--create-startd",
             "--approve-all-licenses",
-            "--add-to-start=http,logging-log4j2"
+            "--add-modules=http,logging-log4j2"
         };
 
-        try (DistributionTester.Run run1 = distribution.start(args))
+        try (JettyHomeTester.Run run1 = distribution.start(args))
         {
-            assertTrue(run1.awaitFor(5, TimeUnit.SECONDS));
+            assertTrue(run1.awaitFor(10, TimeUnit.SECONDS));
             assertEquals(0, run1.getExitValue());
 
-            Files.copy(Paths.get("src/test/resources/log4j2.xml"), //
-                       Paths.get(jettyBase.toString(),"resources").resolve("log4j2.xml"), //
-                       StandardCopyOption.REPLACE_EXISTING);
+            Files.copy(Paths.get("src/test/resources/log4j2.xml"),
+                Paths.get(jettyBase.toString(), "resources").resolve("log4j2.xml"),
+                StandardCopyOption.REPLACE_EXISTING);
 
             int port = distribution.freePort();
-            try (DistributionTester.Run run2 = distribution.start("jetty.http.port=" + port))
+            try (JettyHomeTester.Run run2 = distribution.start("jetty.http.port=" + port))
             {
                 assertTrue(run2.awaitLogsFileFor(
-                    jettyBase.resolve("logs").resolve("jetty.log"), //
+                    jettyBase.resolve("logs").resolve("jetty.log"),
                     "Started Server@", 10, TimeUnit.SECONDS));
 
                 startHttpClient();
@@ -538,9 +656,254 @@ public class DistributionTests extends AbstractDistributionTest
                 assertEquals(HttpStatus.NOT_FOUND_404, response.getStatus());
 
                 run2.stop();
-                assertTrue(run2.awaitFor(5, TimeUnit.SECONDS));
+                assertTrue(run2.awaitFor(10, TimeUnit.SECONDS));
             }
         }
     }
 
+    @Test
+    public void testJavaUtilLogging() throws Exception
+    {
+        String jettyVersion = System.getProperty("jettyVersion");
+        JettyHomeTester distribution = JettyHomeTester.Builder.newInstance()
+            .jettyVersion(jettyVersion)
+            .mavenLocalRepository(System.getProperty("mavenRepoPath"))
+            .build();
+
+        String[] args = {
+            "--approve-all-licenses",
+            "--add-modules=http,logging-jul"
+        };
+
+        try (JettyHomeTester.Run run1 = distribution.start(args))
+        {
+            assertTrue(run1.awaitFor(10, TimeUnit.SECONDS));
+            assertEquals(0, run1.getExitValue());
+
+            Path julConfig = run1.getConfig().getJettyBase().resolve("resources/java-util-logging.properties");
+            assertTrue(Files.exists(julConfig));
+            Files.write(julConfig, Arrays.asList(System.lineSeparator(), "org.eclipse.jetty.level=FINE"), StandardOpenOption.APPEND);
+
+            int port = distribution.freePort();
+            try (JettyHomeTester.Run run2 = distribution.start("jetty.http.port=" + port))
+            {
+                assertTrue(run2.awaitConsoleLogsFor("Started Server@", 10, TimeUnit.SECONDS));
+                assertThat(run2.getLogs().stream()
+                    // Check that the level formatting is that of the j.u.l. configuration file.
+                    .filter(log -> log.contains("[FINE]"))
+                    .count(), greaterThan(0L));
+
+                startHttpClient();
+                ContentResponse response = client.GET("http://localhost:" + port);
+                assertEquals(HttpStatus.NOT_FOUND_404, response.getStatus());
+            }
+        }
+    }
+
+    @Test
+    public void testJavaUtilLoggingBridge() throws Exception
+    {
+        String jettyVersion = System.getProperty("jettyVersion");
+        JettyHomeTester distribution = JettyHomeTester.Builder.newInstance()
+            .jettyVersion(jettyVersion)
+            .mavenLocalRepository(System.getProperty("mavenRepoPath"))
+            .build();
+
+        String[] args = {
+            "--approve-all-licenses",
+            "--add-modules=http,logging-jul-capture"
+        };
+
+        try (JettyHomeTester.Run run1 = distribution.start(args))
+        {
+            assertTrue(run1.awaitFor(10, TimeUnit.SECONDS));
+            assertEquals(0, run1.getExitValue());
+
+            Path jettyBase = run1.getConfig().getJettyBase();
+
+            Path julConfig = jettyBase.resolve("resources/java-util-logging.properties");
+            assertTrue(Files.exists(julConfig));
+
+            Path etc = jettyBase.resolve("etc");
+            Files.createDirectories(etc);
+            Path julXML = etc.resolve("jul.xml");
+            String loggerName = getClass().getName();
+            String message = "test-log-line";
+            String xml = "" +
+                "<?xml version=\"1.0\"?>" +
+                "<!DOCTYPE Configure PUBLIC \"-//Jetty//Configure//EN\" \"https://www.eclipse.org/jetty/configure_10_0.dtd\">" +
+                "<Configure>" +
+                "  <Call name=\"getLogger\" class=\"java.util.logging.Logger\">" +
+                "    <Arg>" + loggerName + "</Arg>" +
+                "    <Call name=\"log\">" +
+                "      <Arg><Get class=\"java.util.logging.Level\" name=\"FINE\" /></Arg>" +
+                "      <Arg>" + message + "</Arg>" +
+                "    </Call>" +
+                "  </Call>" +
+                "</Configure>";
+            Files.write(julXML, List.of(xml), StandardOpenOption.CREATE);
+
+            Path julIni = jettyBase.resolve("start.d/logging-jul-capture.ini");
+            assertTrue(Files.exists(julIni));
+            Files.write(julIni, List.of("etc/jul.xml"), StandardOpenOption.APPEND);
+
+            Path jettyLogConfig = jettyBase.resolve("resources/jetty-logging.properties");
+            Files.write(jettyLogConfig, List.of(loggerName + ".LEVEL=DEBUG"), StandardOpenOption.TRUNCATE_EXISTING);
+
+            int port = distribution.freePort();
+            try (JettyHomeTester.Run run2 = distribution.start("jetty.http.port=" + port))
+            {
+                assertTrue(run2.awaitConsoleLogsFor("Started Server@", 10, TimeUnit.SECONDS));
+                assertEquals(1, run2.getLogs().stream()
+                    // Check that the level formatting is that of the j.u.l. configuration file.
+                    .filter(log -> log.contains(message))
+                    .count());
+
+                startHttpClient();
+                ContentResponse response = client.GET("http://localhost:" + port);
+                assertEquals(HttpStatus.NOT_FOUND_404, response.getStatus());
+            }
+        }
+    }
+
+    @Test
+    public void testBeforeDirectiveInModule() throws Exception
+    {
+        String jettyVersion = System.getProperty("jettyVersion");
+        JettyHomeTester distribution = JettyHomeTester.Builder.newInstance()
+            .jettyVersion(jettyVersion)
+            .mavenLocalRepository(System.getProperty("mavenRepoPath"))
+            .build();
+
+        String[] args1 = {
+            "--add-modules=https,test-keystore"
+        };
+
+        try (JettyHomeTester.Run run1 = distribution.start(args1))
+        {
+            assertTrue(run1.awaitFor(10, TimeUnit.SECONDS));
+            assertEquals(0, run1.getExitValue());
+
+            Path jettyBase = run1.getConfig().getJettyBase();
+
+            Path jettyBaseEtc = jettyBase.resolve("etc");
+            Files.createDirectories(jettyBaseEtc);
+            Path sslPatchXML = jettyBaseEtc.resolve("ssl-patch.xml");
+            String nextProtocol = "fcgi/1.0";
+            String xml = "" +
+                "<?xml version=\"1.0\"?>" +
+                "<!DOCTYPE Configure PUBLIC \"-//Jetty//Configure//EN\" \"https://www.eclipse.org/jetty/configure_10_0.dtd\">" +
+                "<Configure id=\"sslConnector\" class=\"org.eclipse.jetty.server.ServerConnector\">" +
+                "  <Call name=\"addIfAbsentConnectionFactory\">" +
+                "    <Arg>" +
+                "      <New class=\"org.eclipse.jetty.server.SslConnectionFactory\">" +
+                "        <Arg name=\"next\">" + nextProtocol + "</Arg>" +
+                "        <Arg name=\"sslContextFactory\"><Ref refid=\"sslContextFactory\"/></Arg>" +
+                "      </New>" +
+                "    </Arg>" +
+                "  </Call>" +
+                "  <Call name=\"addConnectionFactory\">" +
+                "    <Arg>" +
+                "      <New class=\"org.eclipse.jetty.fcgi.server.ServerFCGIConnectionFactory\">" +
+                "        <Arg><Ref refid=\"sslHttpConfig\" /></Arg>" +
+                "      </New>" +
+                "    </Arg>" +
+                "  </Call>" +
+                "</Configure>";
+            Files.write(sslPatchXML, List.of(xml), StandardOpenOption.CREATE);
+
+            Path jettyBaseModules = jettyBase.resolve("modules");
+            Files.createDirectories(jettyBaseModules);
+            Path sslPatchModule = jettyBaseModules.resolve("ssl-patch.mod");
+            String module = "" +
+                "[depends]\n" +
+                "fcgi\n" +
+                "\n" +
+                "[before]\n" +
+                "https\n" +
+                "http2\n" + // http2 is not explicitly enabled.
+                "\n" +
+                "[after]\n" +
+                "ssl\n" +
+                "\n" +
+                "[xml]\n" +
+                "etc/ssl-patch.xml\n";
+            Files.write(sslPatchModule, List.of(module), StandardOpenOption.CREATE);
+
+            String[] args2 = {
+                "--add-modules=ssl-patch"
+            };
+
+            try (JettyHomeTester.Run run2 = distribution.start(args2))
+            {
+                assertTrue(run2.awaitFor(10, TimeUnit.SECONDS));
+                assertEquals(0, run2.getExitValue());
+
+                int port = distribution.freePort();
+                try (JettyHomeTester.Run run3 = distribution.start("jetty.http.port=" + port))
+                {
+                    assertTrue(run3.awaitConsoleLogsFor("Started Server@", 10, TimeUnit.SECONDS));
+
+                    // Check for the protocol order: fcgi must be after ssl and before http.
+                    assertTrue(run3.getLogs().stream()
+                        .anyMatch(log -> log.contains("(ssl, fcgi/1.0, http/1.1)")));
+
+                    // Protocol "h2" must not be enabled because the
+                    // http2 Jetty module was not explicitly enabled.
+                    assertFalse(run3.getLogs().stream()
+                        .anyMatch(log -> log.contains("h2")));
+                }
+            }
+        }
+    }
+
+    @Test
+    public void testDefaultLoggingProviderNotActiveWhenExplicitProviderIsPresent() throws Exception
+    {
+        String jettyVersion = System.getProperty("jettyVersion");
+        JettyHomeTester distribution1 = JettyHomeTester.Builder.newInstance()
+            .jettyVersion(jettyVersion)
+            .mavenLocalRepository(System.getProperty("mavenRepoPath"))
+            .build();
+
+        String[] args1 = {
+            "--approve-all-licenses",
+            "--add-modules=logging-logback,http"
+        };
+
+        try (JettyHomeTester.Run run1 = distribution1.start(args1))
+        {
+            assertTrue(run1.awaitFor(10, TimeUnit.SECONDS));
+            assertEquals(0, run1.getExitValue());
+
+            Path jettyBase = run1.getConfig().getJettyBase();
+
+            assertTrue(Files.exists(jettyBase.resolve("resources/logback.xml")));
+            // The jetty-logging.properties should be absent.
+            assertFalse(Files.exists(jettyBase.resolve("resources/jetty-logging.properties")));
+        }
+
+        JettyHomeTester distribution2 = JettyHomeTester.Builder.newInstance()
+            .jettyVersion(jettyVersion)
+            .mavenLocalRepository(System.getProperty("mavenRepoPath"))
+            .build();
+
+        // Try the modules in reverse order, since it may execute a different code path.
+        String[] args2 = {
+            "--approve-all-licenses",
+            "--add-modules=http,logging-logback"
+        };
+
+        try (JettyHomeTester.Run run2 = distribution2.start(args2))
+        {
+            assertTrue(run2.awaitFor(1000, TimeUnit.SECONDS));
+            assertEquals(0, run2.getExitValue());
+
+            Path jettyBase = run2.getConfig().getJettyBase();
+
+            assertTrue(Files.exists(jettyBase.resolve("resources/logback.xml")));
+            // The jetty-logging.properties should be absent.
+            assertFalse(Files.exists(jettyBase.resolve("resources/jetty-logging.properties")));
+        }
+    }
 }
